test google colab2

--- a/docs/Harmony_21.4Demo.ipynb
+++ b/docs/Harmony_21.4Demo.ipynb
@@ -5,7 +5,7 @@
    "id": "baf6c0ae",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/nasa/harmony/blob/main/docs/Configuring%20a%20Harmony%20service.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/nasa/harmony/blob/test-colab/docs/Harmony_21.4Demo.ipynb)"
    ]
   },
   {
