Add colab tag to notebook

--- a/workload/performance-charts.ipynb
+++ b/workload/performance-charts.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github//nasa/harmony/blob/main/workload/performance-charts.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create performance charts\n",
     "This notebook demonstrates how to create charts for a performance run or set of performance runs"
    ]
