--- a/docs/Harmony_21.4Demo.ipynb
+++ b/docs/Harmony_21.4Demo.ipynb
@@ -41,11 +41,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "22379698",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\n",
+      "Collecting harmony-service-lib\n",
+      "  Downloading harmony_service_lib-1.0.14-py3-none-any.whl (40 kB)\n",
+      "\u001b[K     |████████████████████████████████| 40 kB 2.4 MB/s  eta 0:00:01\n",
+      "\u001b[?25hCollecting pynacl~=1.4\n",
+      "  Downloading PyNaCl-1.5.0-cp36-abi3-macosx_10_10_universal2.whl (349 kB)\n",
+      "\u001b[K     |████████████████████████████████| 349 kB 7.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting python-json-logger~=2.0.1\n",
+      "  Using cached python_json_logger-2.0.2-py3-none-any.whl (7.4 kB)\n",
+      "Collecting deprecation~=2.1.0\n",
+      "  Using cached deprecation-2.1.0-py2.py3-none-any.whl (11 kB)\n",
+      "Requirement already satisfied: boto3~=1.14 in /usr/local/lib/python3.9/site-packages (from harmony-service-lib) (1.18.40)\n",
+      "Requirement already satisfied: requests~=2.24 in /usr/local/lib/python3.9/site-packages (from harmony-service-lib) (2.25.1)\n",
+      "Requirement already satisfied: pystac~=0.5.3 in /usr/local/lib/python3.9/site-packages (from harmony-service-lib) (0.5.6)\n",
+      "Requirement already satisfied: s3transfer<0.6.0,>=0.5.0 in /usr/local/lib/python3.9/site-packages (from boto3~=1.14->harmony-service-lib) (0.5.0)\n",
+      "Requirement already satisfied: botocore<1.22.0,>=1.21.40 in /usr/local/lib/python3.9/site-packages (from boto3~=1.14->harmony-service-lib) (1.21.40)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /usr/local/lib/python3.9/site-packages (from boto3~=1.14->harmony-service-lib) (0.10.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /usr/local/lib/python3.9/site-packages (from botocore<1.22.0,>=1.21.40->boto3~=1.14->harmony-service-lib) (1.26.3)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.9/site-packages (from botocore<1.22.0,>=1.21.40->boto3~=1.14->harmony-service-lib) (2.7.5)\n",
+      "Requirement already satisfied: packaging in /usr/local/Cellar/sip/6.1.1/libexec/lib/python3.9/site-packages (from deprecation~=2.1.0->harmony-service-lib) (20.9)\n",
+      "Requirement already satisfied: cffi>=1.4.1 in /usr/local/lib/python3.9/site-packages (from pynacl~=1.4->harmony-service-lib) (1.14.6)\n",
+      "Requirement already satisfied: pycparser in /usr/local/lib/python3.9/site-packages (from cffi>=1.4.1->pynacl~=1.4->harmony-service-lib) (2.20)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/jnorton1/Library/Python/3.9/lib/python/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.22.0,>=1.21.40->boto3~=1.14->harmony-service-lib) (1.15.0)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.9/site-packages (from requests~=2.24->harmony-service-lib) (4.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.9/site-packages (from requests~=2.24->harmony-service-lib) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.9/site-packages (from requests~=2.24->harmony-service-lib) (2020.12.5)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.9/site-packages (from packaging->deprecation~=2.1.0->harmony-service-lib) (2.4.7)\n",
+      "Installing collected packages: python-json-logger, pynacl, deprecation, harmony-service-lib\n",
+      "\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\n",
+      "\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\n",
+      "\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\n",
+      "\u001b[33m  DEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\n",
+      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\n",
+      "Successfully installed deprecation-2.1.0 harmony-service-lib-1.0.14 pynacl-1.5.0 python-json-logger-2.0.2\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 22.0.4 is available.\n",
+      "You should consider upgrading via the '/usr/local/opt/python@3.9/bin/python3.9 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'BBox' from 'harmony' (/usr/local/lib/python3.9/site-packages/harmony/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-45ba2077156d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'install harmony-service-lib'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Shared libraries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mharmony\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBBox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mClient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCollection\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEnvironment\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRequest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLinkType\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mxarray\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'BBox' from 'harmony' (/usr/local/lib/python3.9/site-packages/harmony/__init__.py)"
+     ]
+    }
+   ],
    "source": [
+    "%pip install harmony-service-lib\n",
     "# Shared libraries\n",
     "from harmony import BBox, Client, Collection, Environment, Request, LinkType\n",
     "import xarray as xr\n",
@@ -2921,9 +2977,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_openscapes",
+   "display_name": "harmony-venv",
    "language": "python",
-   "name": "conda_openscapes"
+   "name": "harmony-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2935,7 +2991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
