--- a/workload/performance-charts.ipynb
+++ b/workload/performance-charts.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell only if running in Google Colab\n",
+    "!rm -rf harmony\n",
+    "!git clone https://github.com/nasa/harmony.git\n",
+    "%cd harmony/workload"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
